env updated w mnemonic

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-MNEMONIC = 'ensure level advance true boat luxury upon august outside whip unaware enforce'
-
+MNEMONIC = 'bracket journey kiss mad manual ankle toddler matter swim staff news fresh'
